fix itemWrapper gap

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -34,13 +34,12 @@
 stretch until a maximum width. */
 .itemWrapper {
   padding: 0px 32px;
-  /* min-width: 20em; */
   max-width: var(--outer-guide-width);
   width: 100%;
 
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 16px;
 }
 
 @media only screen and (max-width: 720px) {
